--- a/index.html
+++ b/index.html
@@ -13,11 +13,9 @@
     </header>
 
     <div class="scores">
-      <h2>Player:</h2>
-      <span id="player-score">0</span>
+      <span id="player-score">Player: 0</span>
 
-      <h2>Computer:</h2>
-      <span id="computer-score">0</span>
+      <span id="computer-score">Computer: 0</span>
     </div>
 
     <div class="choices">
@@ -26,11 +24,12 @@
       <button class="scissorsBtn">&#9996;</button>
     </div>
 
-    <h2 id="demo1">Make your move</h2>
-    <h3 id="demo2">Moves left:</h3>
-    <span id="moves-left">10</span>
+    <h2 id="demo">Make your move!</h2>
+
+    <span id="moves-left">Moves left: 10</span>
+    
 
     <button class="restartBtn">Restart!</button>
-    <h3 id="result"></h3>
+    <h1 id="result"></h1>
   </body>
 </html>
